# Agent3

./: .gitignore  AGENT5_V4_README.md  ARCHITECTURE_v4.md  CHANGELOG_v3.md  CHANGELOG_v4.md  COMMAND_SUMMARY.md  FIXES_v3.md  FLOWCHART_GENERATION_FLOW.md  IMPROVEMENTS.md  INSTALL_v4.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_LIBCLANG.md  README.md  README_V4.md  README_V4_ADDITION.md  README_V4_QUICKSTART.md  USAGE_LIBCLANG.md  V4_ARCHITECTURE.md  V4_CHANGELOG.md  V4_FEATURES.md  V4_IMPLEMENTATION_SUMMARY.md  V4_QUICKSTART.md  V4_QUICK_START.md  diagnose_import_issue.py  fix_v4_install.ps1  pyproject.toml  requirements.txt  setup_gpu_server.sh  setup_v4.py  test_import.py
agent3/: __main__.py  cli.py  config.py  cpp_callgraph.py  cpp_loader.py  flowchart.py  fs_utils.py  indexer.py  logging_utils.py  ollama_compat.py  rag_graph.py  vectorstore.py
agent5/: __init__.py  __main__.py  __main_v4__.py  aggregation_engine.py  aggregator.py  ast_chunker.py  bottom_up_aggregator.py  call_graph_builder.py  cfg_builder.py  clang_analyzer.py  clang_ast_extractor.py  clang_ast_parser.py  clang_parser.py  cli.py  cli_v4.py  config.py  cpp_loader.py  cross_file_scenario.py  detail_filter.py  docagent_pipeline.py  flowchart.py  flowchart_v4.py  fs_utils.py  indexer.py  json_ast_sfm.py  leaf_semantic_extractor.py  libclang_ast.py  logging_utils.py  mermaid_generator.py  mermaid_translator.py  mermaid_translator_v4.py  ollama_compat.py  pipeline.py  pipeline_v4.py  project_scenario.py  rag_system.py  scenario_extractor.py  scenario_pipeline_v4.py  semantic_aggregator.py  (+7 more)
(+2 files in other folders)
